[package]
name = "aur-thumbsup"
version = "0.3.2"
authors = ["Bhanupong Petchlert <bpetlert@gmail.com>"]
description = "A tool to manage voting for favorite AUR packages"
documentation = "https://github.com/bpetlert/aur-thumbsup"
homepage = "https://github.com/bpetlert/aur-thumbsup"
repository = "https://github.com/bpetlert/aur-thumbsup"
readme = "README.md"
license = "MIT"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3.25", default-features = true }
log = "0.4.14"
pretty_env_logger = "0.4.0"
anyhow = "1.0.48"
toml = "0.5.8"
reqwest = { version = "0.11.6", features = [
  "blocking",
  "cookies",
  "gzip",
  "json",
  "rustls-tls",
], default-features = false }
cookie = { version = "0.15.1", features = ["percent-encode"] }
time = { version = "0.3.5", features = ["std"] }
scraper = "0.12.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
dialoguer = "0.9.0"
lazy_static = "1.4.0"
colored = "2.0.0"

[dev-dependencies]
csv = "1.1.6"
tempfile = "3.2.0"
