[package]
name = "aur-thumbsup"
version = "0.3.2"

authors = ["Bhanupong Petchlert <bpetlert@gmail.com>"]

description = "A tool to manage voting for favorite AUR packages"
documentation = "https://github.com/bpetlert/aur-thumbsup"
homepage = "https://github.com/bpetlert/aur-thumbsup"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bpetlert/aur-thumbsup"

edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
clap = { version = "3.0.5", features = ["derive"] }
clap-verbosity-flag = "0.4.0"
colored = "2.0.0"
cookie = { version = "0.16.0", features = ["percent-encode"] }
dialoguer = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
reqwest = { version = "0.11.8", features = [
  "blocking",
  "cookies",
  "gzip",
  "json",
  "rustls-tls",
], default-features = false }
scraper = "0.12.0"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
time = { version = "0.3.5", features = ["std"] }
toml = "0.5.8"

[dev-dependencies]
csv = "1.1.6"
tempfile = "3.2.0"
